--- a/src/html/index.html
+++ b/src/html/index.html
@@ -4,9 +4,12 @@
         <meta charset="UTF-8">
         <title>The Wall</title>
         <link rel="stylesheet" type="text/css" href="../css/style.css">
-        <script src="../../node_modules/jquery/dist/jquery.min.js"></script>
+        <script>
+            const jQuery = require('jquery')
+            const $ = jQuery
+            require('../../node_modules/fomantic-ui/dist/semantic.min.js')
+          </script>
         <link rel="stylesheet" type="text/css" href="../../node_modules/fomantic-ui/dist/semantic.min.css">
-        <script src="../../node_modules/fomantic-ui/dist/semantic.min.js"></script>
     </head>
     <body>
     <header id="title-bar">
@@ -23,12 +26,20 @@
             <input class="task-input" id= "task-input__section" type="text" placeholder="section">
             <input class="task-input" id= "task-input__name" type="text" placeholder="name">
             <input class="task-input" id= "task-input__points" type="number" placeholder="points">
-            <button id="task-submit-btn" type="button" onclick="addTask()">b</button>
+            <button id="task-submit-btn" class="ui button" type="button" onclick="addTask()">b</button>
         </div>
     </form>
-        <div id="points-panel">
-            89
+        <div id="main-panels" class="ui four cards">
+            
         </div>
+        <!-- <div class="ui card">
+            <div class="content" id="points-panel">
+                89
+            </div>
+            <div class="extra content">
+                points
+            </div>
+        </div> -->
     </main>
     </body>
     <script src="../js/dataAccess.js"></script>
