Added electron-builder for packaging

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>The Wall</title>
+        <script src="../js/dataAccess.js"></script>
         <script>
             const jQuery = require('jquery')
             const $ = jQuery
@@ -35,11 +36,10 @@
             </div>
             <button id="task-submit-btn" class="ui button" type="button" autofocus>Submit</button>
         </form>
-        <div id="main-panels" class="ui three cards">
+        <div id="main-panels" class="ui cards">
 
         </div>
     </main>
     </body>
-    <script src="../js/dataAccess.js"></script>
     <script src="../js/index.js"></script>
 </html>
