--- a/src/html/index.html
+++ b/src/html/index.html
@@ -6,9 +6,9 @@
         <script>
             const jQuery = require('jquery')
             const $ = jQuery
-            require('../../node_modules/fomantic-ui/dist/semantic.min.js')
+            require('../../lib/semantic.min.js')
           </script>
-        <link rel="stylesheet" type="text/css" href="../../node_modules/fomantic-ui/dist/semantic.min.css">
+        <link rel="stylesheet" type="text/css" href="../../lib/semantic.min.css">
         <link rel="stylesheet" type="text/css" href="../css/style.css">
     </head>
     <body>
