Removed title ID

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title id="app-title">The Wall</title>
+        <title>The Wall</title>
         <script>
             const jQuery = require('jquery')
             const $ = jQuery
