Formatted Splash screen, added animation

--- a/src/html/splashScreen.html
+++ b/src/html/splashScreen.html
@@ -1,1 +1,25 @@
-<html style="background-color: red"></html>
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-inline';">
+        <link rel="stylesheet" type="text/css" href="../css/splashScreen.css">
+    </head>
+    <body>
+        <div id="text-container">
+            <div id="text">
+                THE WAL
+                <div id="text__L-block">
+                    <span id="text__L-block-1"></span>
+                    <span id="text__L-block-2"></span>
+                    <span id="text__L-block-3"></span>
+                    <span id="text__L-block-4"></span>
+                    <span id="text__L-block-5"></span>
+                </div>
+                <span id="footnote">
+                    CatalanCabbage
+                </span>
+            </div>
+        </div>
+    </body>
+</html>
