--- a/src/html/index.html
+++ b/src/html/index.html
@@ -96,36 +96,49 @@
                 </div>
             </div>
 
-        <div id="top-bar">
-            <div class="settings ui top left pointing dropdown button" id="top-bar__settings">
-                <i><img src="../assets/burger.png" id="settings-btn" height="25px" width="25px"></img></i>
-                <div class="menu">
-                  <div class="item">Settings</div>
-                  <div class="ui divider"></div>
-                  <div class="item">About</div>
+            <div id="top-bar">
+                <div class="settings ui top left pointing dropdown button" id="top-bar__settings">
+                    <i><img src="../assets/burger.png" id="settings-btn" height="25px" width="25px"></img></i>
+                    <div class="menu">
+                    <div class="item">Settings</div>
+                    <div class="ui divider"></div>
+                    <div class="item">About</div>
+                    </div>
                 </div>
-              </div>
-            <form id="top-bar__input-bar">
-                <select name="task" class="task-input task ui search dropdown" id="task-input__task">
-                    <option value="">Task</option>
-                </select>
-                <select name="section" class="task-input section ui search dropdown" id="task-input__section">
-                    <option value="">Section</option>
-                </select>
-                <select name="tags" class="task-input tags ui search dropdown" multiple="" id="task-input__tag">
-                    <option value="">Tags</option>
-                </select>
-                <div class="task-input ui input" id="task-input__points-container">
-                    <input id="task-input__points" type="text" placeholder="points">
-                </div>
-                <button id="task-submit-btn" class="ui button" type="button" autofocus>Submit</button>
-            </form>
-        </div>
-
-        <div id="main-panels" class="ui cards">
-            <!--Added via JS-->
-        </div>
-    </main>
+                <form id="top-bar__input-bar">
+                    <select name="task" class="task-input task ui search dropdown" id="task-input__task">
+                        <option value="">Task</option>
+                    </select>
+                    <select name="section" class="task-input section ui search dropdown" id="task-input__section">
+                        <option value="">Section</option>
+                    </select>
+                    <select name="tags" class="task-input tags ui search dropdown" multiple="" id="task-input__tag">
+                        <option value="">Tags</option>
+                    </select>
+                    <div class="task-input ui input" id="task-input__points-container">
+                        <input id="task-input__points" type="text" placeholder="Points">
+                    </div>
+                    <button id="task-submit-btn" class="ui button" type="button" autofocus>Submit</button>
+                </form>
+            </div>
+            
+            <div id="main-panels" class="ui cards">
+                <!--Added via JS-->
+            </div>
+            <div id="footer-progress">
+                <div class="ui multiple progress total points small" data-total="1000" data-value="100,30,20,30">
+                    <div class="blue bar points display footer">
+                    </div>
+                    <div class="yellow bar points display footer">
+                    </div>
+                    <div class="purple bar">
+                    </div>
+                    <div class="green bar">
+                    </div>
+                    <div class="label" id="footer-progress__label">Progress to 1000</div>
+                    </div>
+            </div>
+        </main>
     </body>
     <script src="../js/index.js"></script>
 </html>
