Added basic wall that toggles on title click; works, but needs to be refactored.

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -16,9 +16,7 @@
 
 <body>
     <header id="title-bar">
-        <div id="title-bar__title">
-            The Wall
-        </div>
+        <div id="title-bar__title">The Wall</div>
         <div id="title-bar__controls">
             <div class="title-bar__button" id="minimize-button">-</div>
             <div class="title-bar__button" id="close-button">x</div>
