Refactoring: * Split css files in two * Major refactoring: views.js * Minor refactoring of remaining

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -11,6 +11,7 @@
     </script>
     <link rel="stylesheet" type="text/css" href="../../lib/semantic.min.css">
     <link rel="stylesheet" type="text/css" href="../css/style.css">
+    <link rel="stylesheet" type="text/css" href="../css/views.css">
 </head>
 
 <body>
